<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/newSystem5Item1"
            android:textAllCaps="false"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="60dp"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextNetworkName"
                    android:layout_width="320dp"
                    android:layout_height="60dp"
                    android:hint="@string/newSystem5Item2"
                    android:background="@drawable/inputtext"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />


                <Space
                    android:layout_width="15dp"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/editTextWifiPassword"
                    android:layout_width="320dp"
                    android:layout_height="60dp"
                    android:hint="@string/newSystem5Item3"
                    android:background="@drawable/inputtext"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </FrameLayout>



        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />


        <Button
            android:id="@+id/nextRecovery4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_colorbis"
            android:fontFamily="sans-serif"
            android:text="@string/nextButton"
            android:textAllCaps="false"
            android:textColor="@drawable/text_colorbis"
            android:textSize="@dimen/small_size"
            android:textStyle="bold"
            />



    </LinearLayout>

</FrameLayout>