<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/settingsTitle"
            android:textAllCaps="false"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="200dp"
            android:paddingBottom="50dp"/>

        <Button
            android:id="@+id/settingsBt1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_colorbis"
            android:fontFamily="sans-serif"
            android:text="@string/delegationTitle"
            android:textAllCaps="false"
            android:textColor="@drawable/text_colorbis"
            android:textSize="@dimen/small_size"
            android:textStyle="bold"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/settingsBt2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_colorbis"
            android:fontFamily="sans-serif"
            android:text="@string/resetTitle"
            android:textAllCaps="false"
            android:textColor="@drawable/text_colorbis"
            android:textSize="@dimen/small_size"
            android:textStyle="bold"
            />
    </LinearLayout>

</FrameLayout>