<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/pastTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023"
            android:fontFamily="sans-serif"
            android:text="@string/pastTitle"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/title_size"
            />

        <Button
            android:id="@+id/returnFootage"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_color"
            android:focusable="false"
            android:fontFamily="sans-serif"
            android:text="@string/returnFootage"
            android:textAllCaps="false"
            android:textColor="@drawable/text_color"
            android:textSize="@dimen/small_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.068"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:layout_width="385dp"
            android:layout_height="285dp"
            android:text="@string/liveErrorNoAccess"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.270"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorRed"
            android:textColorHighlight="@color/colorRed"
            android:textSize="@dimen/title_size"
            android:gravity="center"
            android:background="@color/colorSecondary"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>